kubernetes/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-backend
spec:
  selector:
    app: microservice-backend
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-backend-deployment
spec:
  selector:
    matchLabels:
      app: microservice-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice-backend
    spec:
      containers:
        - name: microservice-backend
          image: microservice-backend
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
