kubernetes/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-frontend
spec:
  selector:
    app: microservice-frontend
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-frontend-deployment
spec:
  selector:
    matchLabels:
      app: microservice-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice-frontend
    spec:
      containers:
      - name: microservice-frontend
        image: microservice-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
