kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: microservice-frontend
          servicePort: 8080
      - path: /api
        backend:
          serviceName: microservice-backend
          servicePort: 8081
